refactor: fix SonarQube issues - serialization, streams, and lambda improvements
- Fixed S1948: Removed conflicting @Transient annotations from JPA entities and made Embeddable classes implement Serializable
- Fixed S6204: Replaced Stream.collect(Collectors.toList()) with .toList() for Java 21 compatibility
- Fixed S1612: Converted lambda expressions to method references (ResourceNotFoundException::new, Objects::nonNull)
- Improved code quality by modernizing to Java 21 patterns
- Reduced OPEN SonarQube issues from 111 to 99 (12 issues resolved)

Files modified:
- Entity classes: OperatorRegistryEntity, PublishJobEntity, ReasonCodeEntity, ResourceEntity, RuleNodeEntity, RuleVersionEntity, TemporalPolicyEntity, ValidationRuleEntity
- Service classes: OperatorService, PublishService, RuleService, RuleVersionService, TemporalPolicyService
- Domain service: RuleVersioningDomainService
- Mapper: LimitsFactMapper